tests/files/parser_tests/should_fail/081.cmdr
//Should not parse string interpolation due to statement instead of expression
x = "${echo hello world}";